--- a/src/app/pages/tasks-page/tasks-page.component.sass
+++ b/src/app/pages/tasks-page/tasks-page.component.sass
@@ -1,6 +1,9 @@
 .wrapper
   padding: 0px 16px
 
+.add-button
+  margin: 16px
+
 .add-task-container
   display: flex
   flex-direction: row
@@ -26,3 +29,7 @@
   .mat-mini-fab
     opacity: 1
     pointer-events: all
+
+.mat-drawer
+  width: 35%
+  padding: 16px
