--- a/src/app/pages/tasks-page/tasks-page.component.html
+++ b/src/app/pages/tasks-page/tasks-page.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container [hasBackdrop]="matDrawerOptions.hasBackdrop" (close)="goToTask()">
+<mat-drawer-container [hasBackdrop]="matDrawerOptions.hasBackdrop" (backdropClick)="goToTask()">
 
   <mat-drawer-content>
 
