Added edit button into task row

--- a/src/app/pages/edit-task-page/edit-task-page.component.html
+++ b/src/app/pages/edit-task-page/edit-task-page.component.html
@@ -18,6 +18,6 @@
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field> -->
   <button mat-flat-button type="submit" color="primary" class='add-button'>
-    Добавить
+    Сохранить
   </button>
 </form>
