--- a/src/app/pages/tasks-page/tasks-page.component.sass
+++ b/src/app/pages/tasks-page/tasks-page.component.sass
@@ -25,7 +25,7 @@
 .mat-list-item:hover
   background-color: rgba(63, 81, 181, .1)
   transition: all 0.2s linear
-  cursor: pointer
+  // cursor: pointer
   .mat-mini-fab
     opacity: 1
     pointer-events: all
@@ -33,3 +33,6 @@
 .mat-drawer
   width: 35%
   padding: 16px
+
+.edit-button
+  margin-right: 16px
