Implemented auto showing sidebar after reload task edit page

--- a/src/app/pages/tasks-page/tasks-page.component.html
+++ b/src/app/pages/tasks-page/tasks-page.component.html
@@ -34,7 +34,7 @@
   </mat-drawer-content>
 
   <mat-drawer #drawer
-    [opened]="matDrawerOptions.opened"
+    [(opened)]="matDrawerOptions.opened"
     [mode]="matDrawerOptions.mode"
     [position]="matDrawerOptions.position"
   >
