Changed styles for completed tasks

--- a/src/app/pages/tasks-page/tasks-page.component.sass
+++ b/src/app/pages/tasks-page/tasks-page.component.sass
@@ -39,3 +39,11 @@
 
 .mat-drawer-container
   height: 100%
+
+.completed
+  .mat-list-item-ripple
+    opacity: .6
+  .mat-line
+    opacity: .6
+    // color: grey
+    text-decoration: line-through
