--- a/src/app/pages/tasks-page/tasks-page.component.html
+++ b/src/app/pages/tasks-page/tasks-page.component.html
@@ -11,7 +11,7 @@
 
         <mat-divider></mat-divider>
 
-        <mat-list-item *ngFor="let task of taskManagerService.tasks">
+        <mat-list-item *ngFor="let task of taskManagerService.tasks" [ngClass]="{'completed': task.done === true}">
           <mat-divider></mat-divider>
            <mat-icon mat-list-icon>
              <mat-checkbox [checked]="task.done" (change)="toggle(task)"></mat-checkbox>
